force-app/main/default/objects/Class_Session__c/Class_Session__c.object-meta.xml
<CustomObject>
    <description>A video session belonging to a class.</description>
    <label>Class Session</label>
    <nameField>
        <displayFormat>Session-{0000}</displayFormat>
        <label>Class Session No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>