force-app/main/default/objects/Class_Session__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The class which this session belongs to</description>
    <inlineHelpText>The class which this session belongs to</inlineHelpText>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Class Sessions</relationshipLabel>
    <relationshipName>Class_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>