force-app/main/default/objects/Class_Session__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>The name of the class session</description>
    <inlineHelpText>The name of the class session</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>