force-app/main/default/objects/Class_Session__c/fields/Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_URL__c</fullName>
    <description>The URL of the video (usually Vimeo)</description>
    <label>Video URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>